--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "eslint-plugin-import": "^2.24.2",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.7.2"
+    "react-native-screens": "^3.7.2",
+    "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
