--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint-import-resolver-babel-module": "^5.3.1",
     "eslint-plugin-import": "^2.24.2",
+    "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-image-picker": "^4.1.1",
