--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-image-picker": "^4.1.1",
     "react-native-image-resizer": "^1.4.5",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-modal": "^13.0.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
