--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-animated-splash-screen": "^2.0.5",
     "react-native-image-picker": "^4.1.1",
     "react-native-image-resizer": "^1.4.5",
     "react-native-iphone-x-helper": "^1.3.1",
