--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.8",
+    "@react-native-firebase/app": "^12.9.1",
+    "@react-native-firebase/database": "^12.9.2",
+    "@react-native-firebase/firestore": "^12.9.1",
     "@react-native-picker/picker": "^2.1.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
@@ -23,10 +26,13 @@
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-animated-splash-screen": "^2.0.5",
+    "react-native-get-random-values": "^1.7.0",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-image-picker": "^4.1.1",
     "react-native-image-resizer": "^1.4.5",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-modal": "^13.0.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
@@ -34,7 +40,8 @@
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
